Fix header colors and alignment, fixed registration page alignment, padding, and colors, and registration text

--- a/app/stylesheets/_header.css.sass
+++ b/app/stylesheets/_header.css.sass
@@ -8,7 +8,7 @@
     width: 1004px
     margin: 0 auto
     position: relative
-    left: 4px
+    left: 2px
     #logo
       margin-top: 10px
       text-decoration: none
@@ -19,7 +19,7 @@
       +text-shadow(#000 -1px 1px 0)
       span
         font-family: Rokkitt, Rockwell, Helvetica, sans-serif
-        color: #b7430c
+        color: #a14238
         font-size: 25px
         position: relative
         bottom: 1px
